updated remaining week2 HW solutions

--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -2061,7 +2061,182 @@
     "\n",
     "    -  Creates a board.\n",
     "    -  Alternates taking turns between two players (beginning with Player 1), placing a marker during each turn.\n",
-    "    -  Evaluates the board for a winner after each placement."
+    "    -  Evaluates the board for a winner after each placement.\n",
+    "    -  Continues the game until one player wins (returning `1` or `2` to reflect the winning player), or the game is a draw (returning `-1`).\n",
+    "\n",
+    "-  Call `play_game` once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_game():\n",
+    "    board = create_board()\n",
+    "    winner = 0\n",
+    "    while(winner == 0):\n",
+    "        for player in range(1,3):\n",
+    "            board = random_place(board, player)\n",
+    "            winner = evaluate(board)\n",
+    "            if winner != 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                continue\n",
+    "    return(player) \n",
+    "\n",
+    "\n",
+    "play_game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#instructor answer\n",
+    "\n",
+    "def play_game():\n",
+    "    board, winner = create_board()\n",
+    "    while winner == 0:\n",
+    "        for player in [1, 2]:\n",
+    "            random_place(board, player)\n",
+    "            winner = evaluate(board)\n",
+    "            if winner != 0:\n",
+    "                break\n",
+    "    return winner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 11**\n",
+    "\n",
+    "We will now play several games, and visualize how often either player wins, or how often the game is a draw.\n",
+    "\n",
+    "-  Use the `play_game()` function to play 1,000 random games, where Player 1 always goes first.\n",
+    "-  Import and use the `time` library to call the `time()` function both before and after playing all 1,000 games.\n",
+    "    -  Store these times as `start` and `stop`, respectively.\n",
+    "    -  Subtract them to evaluate how long it takes to play 1,000 games, and print your answer.\n",
+    "-  The library `matplotlib.pyplot` has already been stored as `plt`. Use `plt.hist()` and `plt.show()` to plot a histogram of the results.\n",
+    "    -  Does Player 1 win more than Player 2?\n",
+    "    -  Does either player win more than each player draws?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "winner_player = []\n",
+    "start = time.time()\n",
+    "for _ in range(1000):\n",
+    "    winner_player.append(play_game())\n",
+    "    \n",
+    "stop = time.time()\n",
+    "duration = stop - start\n",
+    "print(duration)\n",
+    "plt.hist(winner_player)\n",
+    "plt.show()\n",
+    "# player 1 wins more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 12**\n",
+    "\n",
+    "In the previous exercise, we see that when guessing at random, it's better to go first, as expected. Let's see if Player 1 can improve their strategy.\n",
+    "\n",
+    "\n",
+    "-  `create_board()`, `random_place(board, player)`, and `evaluate(board)` have been created from previous exercises. Create a function `play_strategic_game()`, where Player 1 always starts with the middle square, and otherwise both players place their markers randomly.\n",
+    "-  Call `play_strategic_game` once.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_strategic_game():\n",
+    "    board, winner = create_board(), 0\n",
+    "    board[1,1] = 1\n",
+    "    while winner == 0:\n",
+    "        for player in [2,1]:\n",
+    "            board = random_place(board,player)# use `random_place` to play a game, and store as `board`.\n",
+    "            winner = evaluate(board)# use `evaluate(board)`, and store as `winner`.\n",
+    "            if winner != 0:\n",
+    "                break\n",
+    "    return winner\n",
+    "\n",
+    "play_strategic_game()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instructor answer\n",
+    "def play_strategic_game():\n",
+    "    board, winner = create_board(), 0\n",
+    "    board[1,1] = 1\n",
+    "    while winner == 0:\n",
+    "        for player in [2,1]:\n",
+    "            random_place(board,player)# use `random_place` to play a game, and store as `board`.\n",
+    "            winner = evaluate(board)# use `evaluate(board)`, and store as `winner`.\n",
+    "            if winner != 0:\n",
+    "                break\n",
+    "    return winner\n",
+    "\n",
+    "play_strategic_game()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 12**\n",
+    "\n",
+    "\n",
+    "-  The results from Exercise 12 have been stored. Use the `play_strategic_game()` function to play 1,000 random games.\n",
+    "-  Use the `time` libary to evaluate how long all these games takes.\n",
+    "-  The library `matplotlib.pyplot` has already been stored as `plt`. Use `plt.hist` and `plt.show` to plot your results. Did Player 1's performance improve? Does either player win more than each player draws?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "winner_player = []\n",
+    "start = time.time()\n",
+    "for _ in range(1000):\n",
+    "    play_strategic_game()\n",
+    "    winner_player.append(play_game())\n",
+    "\n",
+    "end = time.time()\n",
+    "duration = end - start\n",
+    "print(duration)\n",
+    "plt.hist(winner_player)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, starting in the middle square is a large advantage when play is otherwise random. Also, each game takes less time to play, because each victory is decided earlier. Player 1 wins much more than Player 2, and draws are less common. "
    ]
   }
  ],
