--- a/case_studies_I.ipynb
+++ b/case_studies_I.ipynb
@@ -5106,9 +5106,9 @@
     "In this exercise, we will create a function that calculates the accuracy between predictions and outcomes.\n",
     "\n",
     "\n",
-    "    Create a function accuracy(predictions, outcomes) that takes two lists of the same size as arguments and returns a single number, which is the percentage of elements that are equal for the two lists.\n",
-    "    Use accuracy to compare the percentage of similar elements in x = np.array([1,2,3]) and y = np.array([1,2,4]).\n",
-    "    Print your answer.\n"
+    "-  Create a function `accuracy(predictions, outcomes)` that takes two lists of the same size as arguments and returns a single number, which is the percentage of elements that are equal for the two lists.\n",
+    "-  Use `accuracy` to compare the percentage of similar elements in `x = np.array([1,2,3])` and `y = np.array([1,2,4])`.\n",
+    "-  Print your answer.\n"
    ]
   },
   {
@@ -5134,11 +5134,11 @@
    "source": [
     "# Exercise 6\n",
     "\n",
-    "The dataset remains stored as data. Because most wines in the dataset are classified as low quality, one very simple classification rule is to predict that all wines are of low quality. In this exercise, we determine the accuracy of this simple rule. The accuracy() function preloaded into memory as defined in Exercise 5.\n",
+    "The dataset remains stored as data. Because most wines in the dataset are classified as low quality, one very simple classification rule is to predict that all wines are of low quality. In this exercise, we determine the accuracy of this simple rule. The `accuracy()` function preloaded into memory as defined in Exercise 5.\n",
     "\n",
     "\n",
-    "    Use accuracy() to calculate how many wines in the dataset are of low quality. Do this by using 0 as the first argument, and data[\"high_quality\"] as the second argument.\n",
-    "    Print your result.\n"
+    "-  Use `accuracy()` to calculate how many wines in the dataset are of low quality. Do this by using `0` as the first argument, and `data[\"high_quality\"]` as the second argument.\n",
+    "-  Print your result.\n"
    ]
   },
   {
@@ -5160,9 +5160,9 @@
     "In this exercise, we will use the kNN classifier from scikit-learn to predict the quality of wines in our dataset.\n",
     "\n",
     "\n",
-    "    Use knn.predict(numeric_data) to predict which wines are high and low quality and store the result as library_predictions.\n",
-    "    Use accuracy to find the accuracy of your predictions, using library_predictions as the first argument and data[\"high_quality\"] as the second argument.\n",
-    "    Print your answer. Is this prediction better than the simple classifier in Exercise 6?\n"
+    "-  Use `knn.predict(numeric_data)` to predict which wines are high and low quality and store the result as `library_predictions`.\n",
+    "-  Use `accuracy` to find the accuracy of your predictions, using `library_predictions` as the first argument and `data[\"high_quality\"]` as the second argument.\n",
+    "-  Print your answer. Is this prediction better than the simple classifier in Exercise 6?\n"
    ]
   },
   {
@@ -5185,9 +5185,9 @@
    "source": [
     "#Exercise 8\n",
     "\n",
-    "Unlike the scikit-learn function, our homemade kNN classifier does not take any shortcuts in calculating which neighbors are closest to each observation, so it is likely too slow to carry out on the whole dataset. In this exercise, we will select a subset of our data to use in our homemade kNN classifier.\n",
+    "Unlike the `scikit-learn` function, our homemade kNN classifier does not take any shortcuts in calculating which neighbors are closest to each observation, so it is likely too slow to carry out on the whole dataset. In this exercise, we will select a subset of our data to use in our homemade kNN classifier.\n",
     "\n",
-    "To circumvent this, fix the random generator using random.seed(123), and select 10 rows from the dataset using random.sample(range(n_rows), 10). Store this selection as selection."
+    "To circumvent this, fix the random generator using `random.seed(123)`, and select 10 rows from the dataset using `random.sample(range(n_rows), 10)`. Store this selection as `selection`."
    ]
   },
   {
@@ -5208,12 +5208,12 @@
    "source": [
     "#Exercise 9\n",
     "\n",
-    "We are now ready to use our homemade kNN classifier and compare the accuracy of our results to the baseline. The sample of 10 row indices are stored as selection from the previous exercise.\n",
+    "We are now ready to use our homemade `kNN classifier` and compare the accuracy of our results to the baseline. The sample of 10 row indices are stored as `selection` from the previous exercise.\n",
     "\n",
     "\n",
-    "    For each predictor p in predictors[selection], use knn_predict(p, predictors[training_indices,:], outcomes, k=5) to predict the quality of each wine in the prediction set, and store these predictions as a np.array called my_predictions. Note that knn_predict is already defined as in the Case 3 videos.\n",
-    "    Using the accuracy function, compare these results to the selected rows from the high_quality variable in data using my_predictions as the first argument and data.high_quality[selection] as the second argument. Store these results as percentage.\n",
-    "    Print your answer.\n"
+    "-  For each predictor `p` in `predictors[selection]`, use `knn_predict(p, predictors[training_indices,:], outcomes, k=5)` to predict the quality of each wine in the prediction set, and store these predictions as a `np.array` called `my_predictions`. Note that `knn_predict` is already defined as in the Case 3 videos.\n",
+    "-  Using the `accuracy` function, compare these results to the selected rows from the high_quality variable in data using `my_predictions` as the first argument and `data.high_quality[selection]` as the second argument. Store these results as `percentage`.\n",
+    "-  Print your answer.\n"
    ]
   },
   {
